<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Requirements">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/category"
        android:id="@+id/Category"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        android:textColor="#ff683cff" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/Category_text"
        android:layout_below="@+id/Category"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:editable="false"
        android:inputType="textAutoCorrect" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/pr"
        android:id="@+id/PR"
        android:layout_below="@+id/Category_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textColor="#ff6f44fe"
        android:textSize="24sp" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/min"
        android:id="@+id/Min"
        android:layout_below="@+id/PR"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:textColor="#ff6f44fd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/Min_value"
        android:layout_alignTop="@+id/Min"
        android:layout_toEndOf="@+id/Min"
        android:inputType="number"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/max"
        android:id="@+id/Max"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textColor="#ff6f44fd"
        android:layout_below="@+id/Min"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/Max_value"
        android:layout_toEndOf="@+id/Max"
        android:inputType="number"
        android:layout_alignTop="@+id/Max"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/Next"
        android:layout_below="@+id/Max_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>
